[gd_scene load_steps=5 format=3 uid="uid://c8kwmcofaojl1"]

[ext_resource type="Script" uid="uid://b21rcurdj8uu8" path="res://script/time.gd" id="1_28c5v"]
[ext_resource type="Texture2D" uid="uid://bv2rgr50duurr" path="res://sprite/map_ency_inven/sb_sun1.png" id="2_a3kdo"]
[ext_resource type="Texture2D" uid="uid://cashoam52ifkh" path="res://sprite/map_ency_inven/sb_sun2.png" id="3_4cdin"]
[ext_resource type="Texture2D" uid="uid://cx1j53dfags45" path="res://sprite/map_ency_inven/sb_moon1.png" id="4_4cdin"]

[node name="time" type="Node2D"]
z_index = 300
script = ExtResource("1_28c5v")

[node name="Label" type="Label" parent="."]
z_index = 2
offset_left = -85.0
offset_top = -12.0
offset_right = 320.0
offset_bottom = 153.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Level: 1
Turn: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SbSun1" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(110, 9)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_a3kdo")

[node name="SbSun2" type="Sprite2D" parent="."]
position = Vector2(92, -2)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_4cdin")

[node name="SbMoon1" type="Sprite2D" parent="."]
visible = false
position = Vector2(109, 62)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_4cdin")
